--- a/Assignment 2/Q3/Q3.html
+++ b/Assignment 2/Q3/Q3.html
@@ -3,47 +3,48 @@
 <body>
     <!-- <link rel="stylesheet" href="stl.css"> -->
   <section>
-    <div style="display: flex; align-items: center; justify-content: center; width: 90%; background-color:rgb(74, 162, 169); margin-left: 25px; border-radius: 10px;"> 
-        <div style="width: 30%;">HTML5Sticky <br> Sticky notes</div>
-        <div style="display: flex;">
-            <img src="green pluse.jpeg" height="10px"><img src="cancel.png" height="10px"><img src="document-analysis.png" height="10px"><img src="document-analysis.png" height="10px">
-        </div>
-        <div style="margin-left: 1cm;"><img style="border-radius: 35px;" src="tttt.png" height="10px"><input style="border: 0cap; height: 12px; background-color: rgb(18, 113, 113); font-size: 8px; margin-left: 0.3cm; margin-bottom: 0.10cm; border-radius: 5px; " type="button" value="$ Donate"></div>
-     </div>
+    <center>
+        <div style="display: flex; align-items: center; justify-content: center; width: 60%; background-color:rgb(74, 162, 169); margin-left: 25px; border-radius: 10px;"> 
+            <div style="width: 30%; margin-right: 30px;">HTML5Sticky <br> Sticky notes</div>
+            <div style="display: flex;">
+                <img src="green pluse.jpeg" height="10px"><img src="cancel.png" height="10px"><img src="document-analysis.png" height="10px"><img src="document-analysis.png" height="10px">
+            </div>
+            <div style="margin-left: 1cm;"><img style="border-radius: 35px;" src="tttt.png" height="10px"><input style="border: 0cap; height: 12px; background-color: rgb(18, 113, 113); font-size: 8px; margin-left: 0.3cm; margin-bottom: 0.10cm; border-radius: 5px; " type="button" value="$ Donate"></div>
+         </div>
+    </center>
   </section>
   <br>
-    <div style="display: flex">
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+    <div style="display: flex; align-items: center; justify-content: center; width: 100%;">
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
             <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
         </div>
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
             <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
         </div>
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
             <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
         </div>
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
             <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
         </div>
     </div>
     <br >
     <br>
 
-    <div style="display: flex">
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+    <div style="display: flex; align-items: center; justify-content: center; width: 100%;">
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
             <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
         </div>
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
             <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
         </div>
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
             <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
         </div>
-        <div style="border: 5px solid black; height: 80px; width:100px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
-            <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"/>
+        <div style="border: 10px solid black; height: 180px; width:150px; background-color: orangered; margin: 5px; padding: 2px; border-radius: 2px; font-size:8px;"><img  src="pin.jpeg" height="10px"> 3/18/2020   12:40 pm 
+            <input style="border: 1px solid black; background-color: orangered; height: 10px; width: 70px;font-size: 8px; margin-top: 10px;"  type="text" value="text here"10>
         </div>
     </div>
 
  
-</body>
-</html>
+</body15</html>
